[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.37.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"

[[bin]]
name = "consumer" # Existing executable
path = "src/main.rs"

[[bin]]
name = "analytics_consumer" # New executable
path = "src/analytics_consumer.rs"